# sparkland_test_task

./: .gitignore  CMakeLists.txt  coinbase_log.csv
src/: CoinbaseMessage.h  CoinbaseTickerMessage.cpp  CoinbaseTickerMessage.h  ExponentialMovingAverage.h  MessageLogger.h  TickerMessageLogger.h  TickerMessageReceiver.cpp  TickerMessageReceiver.h  main.cpp  test.cpp
